<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp">

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/setting"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_auto"
            android:text="@string/auto"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setting_menu"
            android:text="@string/menu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/temp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/high_level"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="numberSigned"
            android:layout_height="wrap_content"
            android:id="@+id/et_temp_h"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/degree"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/low_level"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="numberSigned"
            android:layout_height="wrap_content"
            android:id="@+id/et_tmp_l"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/degree"/>

        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/hum"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/high_level"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/et_hum_h"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/percent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/low_level"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/et_hum_l"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/percent"/>

        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/light"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/high_level"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/et_light_h"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/lux"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/low_level"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/et_light_l"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/lux"/>

        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/co2"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/high_level"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/et_co_h"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/ppm"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/low_level"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/et_co_l"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/ppm"/>

        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_submit"
        android:text="@string/submit"/>

</LinearLayout>
